# ZenVerse-synergy-2026

./: .gitignore  AI_GUIDE.md  CHANGES.md  CLAUDE.md  LICENSE  README.md  pr_body.txt
.agents/: AGENTS.md
backend/: .gitignore  README.md  pipeline.py  pyproject.toml  ruff.toml
backend/app/api/: main.py  rest.py  ws.py
backend/app/correlation/: __init__.py  dbscan_clusterer.py  denstream_clusterer.py  distance.py  embedder.py  reconciler.py
backend/app/ingest/: deduplicator.py  normalizer.py  replay_engine.py  synthetic.py
backend/app/models/: db.py  schema.py  state.py
backend/app/rootcause/: __init__.py  ranker.py  topology.py
backend/app/summarize/: __init__.py  summarizer.py
backend/data/eval/: aiops-fault-records.csv  aiops-ground-truth.json
backend/data/samples/: aiops-scn1.jsonl  aiops-scn1_gt.json  aiops-topology.json  db-cascade.jsonl  db-cascade_gt.json  loghub-openstack.jsonl  network-partition.jsonl  network-partition_gt.json  rolling-deploy.jsonl  rolling-deploy_gt.json
backend/data/scenarios/: aiops.yaml  db-cascade.yaml  network-partition.yaml  rolling-deploy.yaml
backend/eval/: __init__.py  bench.py  ground_truth.py  harness.py  metrics.py
backend/eval/results/: aiops-scn1_denstream_4f8eaed.json  aiops-scn1_denstream_5c9165a.json  aiops-scn1_denstream_89b2816.json  aiops-scn1_full_2f65680.json  aiops-scn1_full_4f8eaed.json  aiops-scn1_full_5c9165a.json  aiops-scn1_full_89b2816.json  aiops-scn1_naive_dedup_4f8eaed.json  aiops-scn1_naive_dedup_5c9165a.json  aiops-scn1_naive_dedup_89b2816.json  aiops-scn1_no_semantic_89b2816.json  aiops-scn1_no_temporal_89b2816.json  aiops-scn1_no_topology_89b2816.json  aiops-scn1_topology_gated_2hop_2f65680.json  aiops-scn1_topology_gated_2hop_5c9165a.json  bench_aiops-scn1_0dd9d85.json  bench_aiops-scn1_36af34f.json  bench_aiops-scn1_5c9165a.json  bench_db-cascade_36af34f.json  bench_db-cascade_5c9165a.json  db-cascade_denstream_4f8eaed.json  db-cascade_denstream_5c9165a.json  db-cascade_full_2f65680.json  db-cascade_full_4f8eaed.json  db-cascade_full_5c9165a.json  db-cascade_naive_dedup_4f8eaed.json  db-cascade_naive_dedup_5c9165a.json  db-cascade_no_semantic_4f8eaed.json  (+13 more)
backend/scripts/: build_ground_truth.py  fetch_aiops.py  fetch_model.py  generate_synthetic_db_cascade.py  generate_synthetic_scenario.py  parse_aiops.py  unzip_all.py
backend/tests/: test_deduplicator.py  test_distance.py  test_eval_metrics.py  test_normalizer.py  test_ranker.py  test_reconciler.py  test_replay_reset.py  test_rest.py  test_summarizer.py
(+80 files in other folders)
