[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "eval*"]

[project]
name = "stormlens"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "drain3>=0.9.11",
    "model2vec>=0.3.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "river>=0.21.0",
    "networkx>=3.3",
    "sortedcontainers>=2.4.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pyyaml>=6.0.1",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
