[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "eval*"]

[project]
name = "stormlens"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Pinned exact, not >= floors: this pipeline's measured accuracy numbers
    # depend on the embedding model's exact weights (model2vec) and the
    # template-mining algorithm's exact behavior (drain3). An open-ended
    # floor let a routine `pip install` silently pull a newer model2vec
    # between two eval runs, shifting Hit@1 on 2 near-tie faults with zero
    # code change anywhere in this repo — see eval/results/ regeneration
    # commit for the measured before/after. Pin everything so the numbers
    # this repo reports are reproducible by version, not just by git SHA.
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "sqlalchemy==2.0.51",
    "aiosqlite==0.22.1",
    "drain3==0.9.11",
    "model2vec==0.8.2",
    "sentence-transformers==5.6.0",
    "scikit-learn==1.9.0",
    "river==0.25.0",
    "networkx==3.6.1",
    "sortedcontainers==2.4.0",
    "numpy==2.5.1",
    "scipy==1.18.0",
    "pyyaml==6.0.3",
    "openai==2.45.0",
    "httpx==0.28.1",
    "python-multipart==0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
    "ruff==0.15.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
